--- a/web/bundles/zectranet/css/mainv_001.css
+++ b/web/bundles/zectranet/css/mainv_001.css
@@ -515,10 +515,10 @@ div[data-role="editor-toolbar"] {
 }
 
 .classHoverStatus {
-    border: 1px solid transparent;
+    border: 4px solid transparent;
 }
 
 .classHoverStatus:hover {
-    border: 1px solid #000;
+    border: 4px solid #ccc;
     cursor: pointer;
 }
