--- a/web/bundles/zectranet/css/mainv_001.css
+++ b/web/bundles/zectranet/css/mainv_001.css
@@ -516,9 +516,11 @@ div[data-role="editor-toolbar"] {
 
 .classHoverStatus {
     border: 4px solid transparent;
+    transition: 0.15s linear all;
 }
 
 .classHoverStatus:hover {
-    border: 4px solid #ccc;
+    /*border: 4px solid #ccc;*/
     cursor: pointer;
+    box-shadow: 0 0 10px 0 black;
 }
