--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -82,7 +82,7 @@
                     <b>Other</b>
                 </li>
                 <li class="list-group-item">
-                    <a class="btn btn-default" href="{{ path('zectranet_public_market') }}">Market Place</a>
+                    <a class="btn btn-default" href="{{ path('zectranet_public_market_all_contacts') }}">Market Place</a>
                 </li>
                 <li class="list-group-item">
                     <a class="btn btn-default" href="{{ path('zectranet_show_office_archive', { 'office_id': office.id }) }}">
