--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -59,129 +59,125 @@
                     <p>{{ project.description }}</p>
 
                 </blockquote>
-
             </div>
+        </div>
 
-            <div class="col-md-6">
-
-                <!-- BEGIN OF OFFICE USERS PANEL -->
+        <div class="row">
+            <div class="col-md-4">
                 <div class="row">
-                    <div class="col-xs-9">
-                        <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 410px; overflow-y: auto;" >
+                    <!-- BEGIN OF PROJECT USERS PANEL -->
+                    <div class="col-xs-12">
+                        <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 300px; overflow-y: auto;">
                             <li class="list-group-item active"  style="background:#ddedf4; color:#606060;">
                                 <b>Project Users</b>
                             </li>
                             {% for user in project.users %}
-                            <li class="list-group-item"  >
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <img class="img-responsive img-circle"  src="{{ asset('') ~ 'documents/' ~ user.avatar }}" alt="avatar"/>
+                                <li class="list-group-item">
+                                    <div class="row">
+                                        <div class="col-xs-2">
+                                            <img class="img-responsive img-circle" src="{{ asset('') ~ 'documents/' ~ user.avatar }}" alt="avatar" />
+                                        </div>
+                                        <div class="col-xs-10">
+                                            <p>
+                                                <a href="{{ path('zectranet_user_page', {'user_id': user.id}) }}">
+                                                    {{ user.name ~ ' ' ~ user.surname }}
+                                                </a>
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="col-xs-9">
-                                        <p>
-                                            {{ user.name ~ ' ' ~ user.surname }}
-                                        </p>
-                                    </div>
-                                </div>
-                            </li>
+                                </li>
                             {% endfor %}
-
                         </ul>
                     </div>
 
-                <!-- END OF OFFICE USERS PANEL -->
+                    <!-- END OF PROJECT USERS PANEL -->
 
-                <div class="col-xs-12 col-md-12">
-                    <div class="panel panel-default">
-                        <div class="panel-body" style="background:#ddedf4; color:#606060;">
-                            <strong>Navigation</strong>
-
-                            {% if app.user.id == project.owner.id %}
-                            <div style="float: right;">
-                                <a style="color:#606060 !important;" class="addnew-btn-hover" data-toggle="modal" data-target="#add_epic_story" href="#">
-                                    <i class="fa fa-plus-circle"></i> New Epic Story
-                                </a>
+                    <div class="col-xs-12">
+                        <div class="panel panel-default" style="box-shadow: 2px 3px 6px 0 darkkhaki;">
+                            <div class="panel-body" style="background:#ddedf4; color:#606060;">
+                                <strong>Navigation</strong>
+                                {% if app.user.id == project.owner.id %}
+                                    <div style="float: right;">
+                                        <a style="color:#606060 !important;" class="addnew-btn-hover" data-toggle="modal" data-target="#add_epic_story" href="#">
+                                            <i class="fa fa-plus-circle"></i> New Epic Story
+                                        </a>
+                                    </div>
+                                {% endif %}
                             </div>
-                            {% endif %}
-
-                        </div>
-                        <div cg-busy="promiseProject">
-                            <div style="max-height: 220px; overflow-y: auto; min-height: 220px;">
-                                <a class="list-group-item" style="cursor: pointer;"
-                                   ng-click="changeCurrentPage({{ project.id }}); removeHighlightFromEpicStories();">
-                                    <i class="fa fa-briefcase"></i>
-                                    {{ project.name }}
-                                </a>
-                                <a class="list-group-item" ng-repeat="story in epicStories" style="cursor: pointer;"
-                                   ng-init="story.selected = false;" ng-class="{'list-group-item-success': story.selected }"
-                                   ng-click="changeCurrentPage(story.id); highlightCurrentEpicStory(story.id);">
-                                    <i class="fa fa-briefcase"></i>
-                                    [[ story.name ]]
-                                </a>
+                            <div cg-busy="promiseProject">
+                                <div style="max-height: 220px; overflow-y: auto; min-height: 220px;">
+                                    <a class="list-group-item" style="cursor: pointer;"
+                                       ng-click="changeCurrentPage({{ project.id }}); removeHighlightFromEpicStories();">
+                                        <i class="fa fa-briefcase"></i>
+                                        {{ project.name }}
+                                    </a>
+                                    <a class="list-group-item" ng-repeat="story in epicStories" style="cursor: pointer;"
+                                       ng-init="story.selected = false;" ng-class="{'list-group-item-success': story.selected }"
+                                       ng-click="changeCurrentPage(story.id); highlightCurrentEpicStory(story.id);">
+                                        <i class="fa fa-briefcase"></i>
+                                        [[ story.name ]]
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-            <div class="col-xs-12 col-md-6">
+            <div class="col-md-8">
                 <div class="row">
-                <div class="col-xs-12 col-md-12">
-                    <div ng-controller="DocumentsController">
-                        <!-- BEGIN OF CHAT PANEL -->
-                        <div class="chat-panel" ng-controller="ChatController" style="margin-bottom: 20px;">
-                            <div class="list-group-item" style="background:#ddedf4; color:#606060;">
-                                <i class="fa fa-comments fa-fw"></i>
-                                <strong> Project Chat</strong>
-                            </div>
-                            <div id="posts-panel" class="list-group-item panel-body" cg-busy="promise" style="max-height: 460px; height: 460px;">
-                                <div ng-if="(posts == null) || (posts.length == 0)" class="center-block vertical-center">
-                                    <h3 class="text-info text-center">Post will be displayed here</h3>
+                    <div class="col-xs-12 col-md-12">
+                        <div ng-controller="DocumentsController">
+                            <!-- BEGIN OF CHAT PANEL -->
+                            <div ng-controller="ChatController" style="margin-bottom: 20px;">
+                                <div class="list-group-item" style="background:#ddedf4; color:#606060;">
+                                    <i class="fa fa-comments fa-fw"></i>
+                                    <strong> Project Chat</strong>
                                 </div>
+                                <div id="posts-panel" class="list-group-item panel-body" cg-busy="promise" style="max-height: 460px; height: 460px;">
+                                    <div ng-if="(posts == null) || (posts.length == 0)" class="center-block vertical-center">
+                                        <h3 class="text-info text-center">Post will be displayed here</h3>
+                                    </div>
 
-                                <ng-include src="{{ '\'' ~ asset('bundles/zectranet/templates/chat.html') ~ '\'' }}"></ng-include>
+                                    <ng-include src="{{ '\'' ~ asset('bundles/zectranet/templates/chat.html') ~ '\'' }}"></ng-include>
 
-                            </div>
-                            <div class="list-group-item">
-                                <form class="input-group input-group-lg">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button" style="height: 65px;"  data-placement="top" id="add_dialog_btn"  data-toggle="modal" data-target="#add_dialog">
-                                            <i class="fa fa-file"></i>
-                                        </button>
-                                    </span>
-                                    <textarea id="textarea-post" name="message" class="form-control" rows="3" style="resize: vertical;font-size: 11px; height: 65px;"  ng-keyup="pressEnter($event);" ng-model="message"></textarea>
-                                    <span class="input-group-btn" ng-if="editPostButtonVisible == false">
-                                        <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
-                                            <span>Post</span>
-                                        </button>
-                                    </span>
-                                    <span class="input-group-btn" ng-if="editPostButtonVisible == true">
-                                        <button  class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="EditPost(message)">
-                                            <span>Edit</span>
-                                        </button>
-                                    </span>
-                                </form>
-                                <div id="slide-down-menu-screenshots" style="display: none;" cg-busy="documentPromise">
-                                    <div id="div-screenshot" style="display: none; width: auto;height: auto;">
-                                        <ng-include src="{{ '\'' ~ asset('bundles/zectranet/templates/attachments.html') ~ '\'' }}"></ng-include>
+                                </div>
+                                <div class="list-group-item">
+                                    <form class="input-group input-group-lg">
+                                        <span class="input-group-btn">
+                                            <button class="btn btn-default" type="button" style="height: 65px;"  data-placement="top" id="add_dialog_btn"  data-toggle="modal" data-target="#add_dialog">
+                                                <i class="fa fa-file"></i>
+                                            </button>
+                                        </span>
+                                        <textarea id="textarea-post" name="message" class="form-control" rows="3" style="resize: vertical;font-size: 11px; height: 65px;"  ng-keyup="pressEnter($event);" ng-model="message"></textarea>
+                                        <span class="input-group-btn" ng-if="editPostButtonVisible == false">
+                                            <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
+                                                <span>Post</span>
+                                            </button>
+                                        </span>
+                                        <span class="input-group-btn" ng-if="editPostButtonVisible == true">
+                                            <button  class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="EditPost(message)">
+                                                <span>Edit</span>
+                                            </button>
+                                        </span>
+                                    </form>
+                                    <div id="slide-down-menu-screenshots" style="display: none;" cg-busy="documentPromise">
+                                        <div id="div-screenshot" style="display: none; width: auto;height: auto;">
+                                            <ng-include src="{{ '\'' ~ asset('bundles/zectranet/templates/attachments.html') ~ '\'' }}"></ng-include>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <!-- END OF CHAT PANEL -->
+                            {% include '@Zectranet/dialogAdd.html.twig' %}
                         </div>
-                        <!-- END OF CHAT PANEL -->
-                        {% include '@Zectranet/dialogAdd.html.twig' %}
                     </div>
                 </div>
-                </div>
             </div>
-
         </div>
 
-            <!-- BEGIN OF EPIC STORY ADD MODAL -->
-            {% include '@Zectranet/projectAddEpicStory.html.twig' %}
-            <!-- END OF EPIC STORY ADD MODAL -->
-
+        <!-- BEGIN OF EPIC STORY ADD MODAL -->
+        {% include '@Zectranet/projectAddEpicStory.html.twig' %}
+        <!-- END OF EPIC STORY ADD MODAL -->
 
         <!-- Begin of Tasks -->
         <div class="row" ng-controller="TaskController">
@@ -195,37 +191,32 @@
                     <div cg-busy="promise" class="panel-body">
                         <!-- Begin of Task Nav Tabs -->
                         <div class="row">
-
-                                <ul id="task-view-tabs" class="nav nav-tabs" role="tablist">
-                                    <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation" class="active">
-                                        <a data-toggle="tab" id="task-view-table" class="btn" href="#table-view" aria-controls="table-view" role="tab" aria-expanded="true">
-                                            <i class="fa fa-table fa-2x"></i>
-                                        </a>
-                                    </li>
-                                    {#
-                                    <li data-toggle="tooltip" data-placement="top" title="List view" role="presentation">
-                                        <a data-toggle="tab" id="task-view-list" class="btn" href="#list-view" aria-controls="list-view" role="tab" aria-expanded="false">
-                                            <i class="fa fa-list fa-2x"></i>
-                                        </a>
-                                    </li>
-                                    #}
-                                    <li data-toggle="tooltip" data-placement="top" title="Agile view" role="presentation">
-                                        <a data-toggle="tab" id="task-view-agile"  class="btn" href="#agile-view" aria-controls="agile-view" role="tab" aria-expanded="false">
-                                            <i class="fa fa-th fa-2x"></i>
-                                        </a>
-                                    </li>
-                                    <li data-toggle="tooltip" data-placement="top" title="Add new task" role="presentation">
-                                        <a id="add_new_task_btn" style="cursor: pointer" data-toggle="modal" data-target="#add_new_task">
-                                            <i class="fa fa-plus fa-2x"></i>
-                                        </a>
-                                    </li>
-                                    <li class="pull-right">{% include '@Zectranet/filter.html.twig' %}</li>
-                                </ul>
-
-
+                            <ul id="task-view-tabs" class="nav nav-tabs" role="tablist">
+                                <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation" class="active">
+                                    <a data-toggle="tab" id="task-view-table" class="btn" href="#table-view" aria-controls="table-view" role="tab" aria-expanded="true">
+                                        <i class="fa fa-table fa-2x"></i>
+                                    </a>
+                                </li>
+                                {#
+                                <li data-toggle="tooltip" data-placement="top" title="List view" role="presentation">
+                                    <a data-toggle="tab" id="task-view-list" class="btn" href="#list-view" aria-controls="list-view" role="tab" aria-expanded="false">
+                                        <i class="fa fa-list fa-2x"></i>
+                                    </a>
+                                </li>
+                                #}
+                                <li data-toggle="tooltip" data-placement="top" title="Agile view" role="presentation">
+                                    <a data-toggle="tab" id="task-view-agile"  class="btn" href="#agile-view" aria-controls="agile-view" role="tab" aria-expanded="false">
+                                        <i class="fa fa-th fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li data-toggle="tooltip" data-placement="top" title="Add new task" role="presentation">
+                                    <a id="add_new_task_btn" style="cursor: pointer" data-toggle="modal" data-target="#add_new_task">
+                                        <i class="fa fa-plus fa-2x"></i>
+                                    </a>
+                                </li>
+                                <li class="pull-right">{% include '@Zectranet/filter.html.twig' %}</li>
+                            </ul>
                         </div>
-
-
 
                         <!-- End of Task Nav Tabs -->
 
