All members page

--- a/src/ZectranetBundle/Resources/views/publicMarketAllMembers.html.twig
+++ b/src/ZectranetBundle/Resources/views/publicMarketAllMembers.html.twig
@@ -3,5 +3,64 @@
 {% block title %}All Contacts{% endblock %}
 
 {% block body %}
-    <!-- Place your page here -->
+    <div class="row">
+        <div class="col-md-12">
+        <h2 class="page-header" style="font-family: 'PT Sans Narrow', sans-serif"> All members</h2>
+        </div>
+    </div>
+
+
+    <div class="row">
+
+        <div class="col-xs-12 publickMarker-all-member">
+            <div class="col-xs-1">
+                <img class="img-responsive" src="{{ asset('') }}documents/{{ app.user.avatar }}">
+            </div>
+            <div class="col-xs-8 all-member-text">
+                <h4><a href="#">Nikita Lyashenko</a> </h4>
+                <span class="all-member-work">Ukraine StarLife Ltd </span>
+                <br>
+                <span class="all-member-address text-muted">Ukraine, Kyiv Bla bla bl </span>
+            </div>
+            <div class="col-xs-12">
+                <hr style="margin: 8px 0px 0px 0px ;">
+            </div>
+        </div>
+
+        <div class="col-xs-12 publickMarker-all-member">
+            <div class="col-xs-1">
+                <img class="img-responsive" src="{{ asset('') }}documents/{{ app.user.avatar }}">
+            </div>
+            <div class="col-xs-8 all-member-text">
+                <h4><a href="#">Nikita Lyashenko</a> </h4>
+                <span class="all-member-work">Ukraine StarLife Ltd </span>
+                <br>
+                <span class="all-member-address text-muted">Ukraine, Kyiv Bla bla bl </span>
+            </div>
+            <div class="col-xs-12">
+                <hr style="margin: 8px 0px 0px 0px ;">
+            </div>
+        </div>
+
+        <div class="col-xs-12 publickMarker-all-member">
+            <div class="col-xs-1">
+                <img class="img-responsive" src="{{ asset('') }}documents/{{ app.user.avatar }}">
+            </div>
+            <div class="col-xs-8 all-member-text">
+                <h4><a href="#">Nikita Lyashenko</a> </h4>
+                <span class="all-member-work">Ukraine StarLife Ltd </span>
+                <br>
+                <span class="all-member-address text-muted">Ukraine, Kyiv Bla bla bl </span>
+            </div>
+            <div class="col-xs-12">
+                <hr style="margin: 8px 0px 0px 0px ;">
+            </div>
+        </div>
+
+
+
+
+
+
+    </div>
 {% endblock %}
