--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -23,10 +23,11 @@
                                    type="search" />
 
                             <span class="input-group-btn">
-                                <a ng-href="{{ path('zectranet_search_page') }}"
-                                   class="btn btn-default" ng-class="{ 'disabled': searchInput.length == 0 }" target="_blank">
+                                <button type="button" class="btn btn-default"
+                                        ng-class="{ 'disabled': searchInput.length == 0 }"
+                                        ng-click="searchAction(searchInput)">
                                     <i class="fa fa-search"></i>
-                                </a>
+                                </button>
                             </span>
 
                             <div class="dropdown-menu">
@@ -39,41 +40,93 @@
                                     </div>
                                     <div ng-if="miniSearchResults.total > 0">
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.homeOffice">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.message ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">
+                                                [[ item.message ]]
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right">
+                                                    <i class="text-muted" style="font-size: 10px;">home office chat</i>
+                                                </div>
+                                                <span class="clearfix"></span>
+                                            </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.HFForums.threads">
                                             <a ng-href="[[ item.href ]]" target="_self" style="text-decoration: none;">
                                                 <h4 class="text-info">[[ item.title ]]</h4>
                                                 <p style="color: black; font-style: italic; font-size: 11px;">[[ item.message ]]</p>
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right">
+                                                    <i class="text-muted" style="font-size: 10px;">threads</i>
+                                                </div>
+                                                <span class="clearfix"></span>
                                             </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.HFForums.posts">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.message ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">
+                                                [[ item.message ]]
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right" style="font-size: 10px;">
+                                                    <i class="text-muted">header forums posts</i>
+                                                </div>
+                                                <span class="clearfix"></span>
+                                            </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.QnAForums.threads">
                                             <a ng-href="[[ item.href ]]" target="_self" style="text-decoration: none;">
                                                 <h4 class="text-info">[[ item.title ]]</h4>
                                                 <p style="color: black; font-style: italic; font-size: 11px;">[[ item.message ]]</p>
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right" style="font-size: 10px;">
+                                                    <i class="text-muted">QnA forums threads</i>
+                                                </div>
+                                                <span class="clearfix"></span>
                                             </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.QnAForums.posts">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.message ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">
+                                                [[ item.message ]]
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right" style="font-size: 10px;">
+                                                    <i class="text-muted">QnA forums posts</i>
+                                                </div>
+                                                <span class="clearfix"></span>
+                                            </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.Projects.tasks">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.name ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">
+                                                [[ item.name ]]
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right" style="font-size: 10px;">
+                                                    <i class="text-muted">tasks</i>
+                                                </div>
+                                                <span class="clearfix"></span>
+                                            </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.Projects.taskPosts">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.message ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">
+                                                [[ item.message ]]
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right" style="font-size: 10px;">
+                                                    <i class="text-muted">task posts</i>
+                                                </div>
+                                                <span class="clearfix"></span>
+                                            </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.Projects.posts">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.message ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">
+                                                [[ item.message ]]
+                                                <span class="clearfix"></span>
+                                                <div class="pull-right" style="font-size: 10px;">
+                                                    <i class="text-muted">development posts</i>
+                                                </div>
+                                                <span class="clearfix"></span>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -336,6 +389,7 @@
 		JSON_URLS.deleteScrenshots  = "{{ path('zectranet_document_delete', { fileid : 0 }) }}";
 		JSON_URLS.urlGetContactList  = "{{ path('zectranet_get_contact_list')}}";
 		JSON_URLS.urlSendRequest  = "{{ path('zectranet_send_user_membership_request')}}";
+        JSON_URLS.searchPage = "{{ path('zectranet_search_page', { 'slug': 'slug' }) }}";
 
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
