--- a/src/ZectranetBundle/Resources/views/search.html.twig
+++ b/src/ZectranetBundle/Resources/views/search.html.twig
@@ -30,6 +30,16 @@
             <h2 class="page-header" style="margin-top:15px; font-family: 'PT Sans Narrow', sans-serif">Search result</h2>
         </div>
 
+        <div class="col-md-12">
+            <div class="input-group" style="margin-bottom: 15px;">
+                <input type="text" class="form-control" placeholder="Search...">
+
+                <span class="input-group-btn">
+                    <button class="btn btn-primary" type="button">Search</button>
+                </span>
+            </div>
+
+
         <div class="col-md-12 search-result-main">
             <h2><a href="#">Hello world this is the </a></h2>
             <span class="text-muted">Hello world you know what dose mean</span>
