--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -133,7 +133,7 @@
                                     <i class="fa fa-comments fa-fw"></i>
                                     <strong> Project Chat</strong>
                                 </div>
-                                <div id="posts-panel" class="list-group-item panel-body" cg-busy="promise" style="max-height: 460px; height: 460px;">
+                                <div id="posts-panel" class="list-group-item panel-body" cg-busy="promise" style="overflow-x: hidden; min-height: 450px;">
                                     <div ng-if="(posts == null) || (posts.length == 0)" class="center-block vertical-center">
                                         <h3 class="text-info text-center">Post will be displayed here</h3>
                                     </div>
