--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -134,7 +134,7 @@
                         <h4 ng-if="(conversation) && (conversation.messages.length == 0)" class="text-info text-center vertical-center">
                             Posts will be displayed here
                         </h4>
-                        <ul id="conversation-chat" class="chat" scroll-glue="true" style="height: 250px; overflow-y: auto">
+                        <ul id="conversation-chat" class="chat" scroll-glue style="height: 250px; overflow-x: hidden; overflow-y: scroll;">
                             <li ng-repeat="mesage in conversation.messages" style="border-bottom: none;" class="clearfix" ng-class="{'right': {{ app.user.id }} == post.user.id, 'left': {{ app.user.id }} != post.user.id }">
                                 <span class="chat-img" ng-class="{ 'pull-right': {{ app.user.id }} == mesage.user.id, 'pull-left': {{ app.user.id }} != mesage.user.id }" ng-init="avatar = asset + 'documents/' + mesage.user.avatar;">
                                     <img ng-src="[[ avatar ]]" alt="Avatar" class="img-circle img-responsive" style="width: 50px; height: 50px;"/>
