--- a/src/ZectranetBundle/Resources/views/officeArchive.html.twig
+++ b/src/ZectranetBundle/Resources/views/officeArchive.html.twig
@@ -11,7 +11,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <p>
-                        <span>Archived QnA Projects</span>
+                        <span>Archived QnA Forums</span>
                         <button class="pull-right btn btn-default"
                                 data-toggle="tooltip"
                                 data-placement="top"
